--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>SpringBootExamples</groupId>
   <artifactId>SpringBootExamples</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
 	<name>SpringBootExamples</name>
 	<description>Demo project for Spring Boot</description>
